--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,13 @@
             <version>0.7.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.13.1</version>
+        </dependency>
+
     </dependencies>
     
 </project>
